tests/snapshots/trace_solver@17515349904032664008.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
  bundle_name: stateless
  request: "&mut ref mut x: &mut T"
---
&mut ref mut x @ s: &mut T
// Applying rule `Deref`
ref mut x @ *s: T
// Applying rule `BindingBorrow`
x @ &mut *s: &mut T
// Applying rule `Binding`
let x: &mut T = &mut *s

// Final bindings (simplified):
let x: &mut T = &mut *s;
