tests/snapshots/trace_solver@17937303438801350051.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
  bundle_name: stateless
  request: "&[x]: &&mut [T]"
---
&[x] @ s: &&mut [T]
// Applying rule `Deref`
[x] @ *s: &mut [T]
// Applying rule `ConstructorRef`
x @ &mut (**s).0: &mut T
// Applying rule `Binding`
let x: &mut T = &mut (**s).0

// Final bindings (simplified):
let x: &mut T = &mut (**s).0; // Borrow-check error: MutBorrowBehindSharedBorrow
